# codex-rc

./: AGENTS.md  Cargo.toml  package-lock.json  package.json
scripts/: ui_test_runner.mjs
src/: main.rs  server.rs
src/codex/: client.rs
src/relay/: channels.rs  mod.rs  ws_handler.rs
ui/: TEST_CASES.md  index.html
