[package]
name = "codex-rc"
version = "0.2.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = { version = "0.8", features = ["ws"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4", features = ["derive"] }
qrcode = "0.14"
local-ip-address = "0.6"
uuid = { version = "1", features = ["v4"] }
futures-util = "0.3.32"

[profile.release]
strip = true
lto = true
